# lib/db/src/schema/trips.ts
@@ -1,4 +1,4 @@
-import { pgTable, serial, date, integer, varchar, timestamp } from "drizzle-orm/pg-core";
+import { pgTable, serial, date, integer, varchar, timestamp, numeric } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 import { trucksTable } from "./trucks";
@@ -12,6 +12,7 @@ export const tripsTable = pgTable("trips", {
   driverId: integer("driver_id").notNull().references(() => driversTable.id, { onDelete: "restrict" }),
   fromCityId: integer("from_city_id").notNull().references(() => citiesTable.id, { onDelete: "restrict" }),
   toCityId: integer("to_city_id").notNull().references(() => citiesTable.id, { onDelete: "restrict" }),
+  driverCommission: numeric("driver_commission", { precision: 12, scale: 2 }).default("0"),
   status: varchar("status", { length: 20 }).notNull().default("Open"),
   createdAt: timestamp("created_at").defaultNow(),
 });
